--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,11 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - php
+      - mysql
   php:
     build:
       context: ./dockerfiles
@@ -23,5 +27,16 @@ services:
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
-  # artisan:
-  # npm:
+  artisan:
+    build:
+      context: ./dockerfiles
+      dockerfile: php.dockerfile
+    volumes:
+      - ./src:/var/www/html
+    entrypoint: [ "php", "/var/www/html/artisan" ]
+  npm:
+    image: node
+    working_dir: /var/www/html
+    entrypoint: [ "npm" ]
+    volumes:
+      - ./src:/var/www/html
