--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,12 @@
 version: "3.8"
 
 services:
+
   server:
-    image: 'nginx:stable-alpine'
+    # image: 'nginx:stable-alpine'
+    build:
+      context: .
+      dockerfile: ./dockerfiles/nginx.dockerfile
     ports:
       - '8000:80'
     volumes:
@@ -11,22 +15,26 @@ services:
     depends_on:
       - php
       - mysql
+
   php:
     build:
-      context: ./dockerfiles
-      dockerfile: php.dockerfile
+      context: .
+      dockerfile: ./dockerfiles/php.dockerfile
     volumes:
       - ./src:/var/www/html:delegated
+
   mysql:
     image: 'mysql:5.7'
     env_file:
       - ./env/mysql.env
+
   composer:
     build:
       context: ./dockerfiles
       dockerfile: composer.dockerfile
     volumes:
       - ./src:/var/www/html
+
   artisan:
     build:
       context: ./dockerfiles
@@ -34,6 +42,7 @@ services:
     volumes:
       - ./src:/var/www/html
     entrypoint: [ "php", "/var/www/html/artisan" ]
+
   npm:
     image: node
     working_dir: /var/www/html
